<resources>
    <string name="app_name">OniKolo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="createAccount">don\'t have an account Create one!!</string>
    <string name="selectbanks">SELECTS THE BANK ACCOUNTS YOU HAVE</string>
    <string name="glory_trust_bank">GLORY TRUST BANK</string>
    <string name="apex_bank">APEX BANK</string>
    <string name="standard_charts">Standard Charts</string>
    <string name="create_account">Create Account</string>
    <string name="enter_amount_you_want">ENTER AMOUNT YOU WANT TO PAY</string>
    <string name="make_payment">MAKE PAYMENT</string>
</resources>
